force-app/main/default/objects/Apttus_Proposal__DocumentCollateInfo__c/Apttus_Proposal__DocumentCollateInfo__c.object-meta.xml
<CustomObject>
    <label>Document Collate Info</label>
    <nameField>
        <label>Document Collate Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Collate Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>