force-app/main/default/objects/Apttus_Proposal__DocumentCollateInfo__c/fields/Apttus_Proposal__DocumentType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__DocumentType__c</fullName>
    <description>What sort of document this record is a representation of</description>
    <inlineHelpText>What sort of document this record is a representation of</inlineHelpText>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Generated Document</fullName>
            </value>
            <value>
                <fullName>Collated Document</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>