force-app/main/default/objects/Apttus_Proposal__DocumentCollateInfo__c/fields/Apttus_Proposal__EmailAttachments__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__EmailAttachments__c</fullName>
    <description>A list of Attachment ID&apos;s used as attachments for sending email</description>
    <inlineHelpText>A list of Attachment ID&apos;s used as attachments for sending email</inlineHelpText>
    <label>Email Attachments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>