force-app/main/default/objects/Apttus_Proposal__DocumentCollateInfo__c/fields/Apttus_Proposal__ProposalId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__ProposalId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The proposal which contains the source documents</description>
    <inlineHelpText>The proposal which contains the source documents</inlineHelpText>
    <label>Quote/Proposal</label>
    <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
    <relationshipName>CollatedDocuments</relationshipName>
    <type>Lookup</type>
</CustomField>