force-app/main/default/objects/Apttus_Proposal__DocumentCollateInfo__c/fields/Apttus_Proposal__RelatedAttachmentId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__RelatedAttachmentId__c</fullName>
    <description>Id of the Attachment record which was automatically generated</description>
    <inlineHelpText>Id of the Attachment record which was automatically generated</inlineHelpText>
    <label>Related Attachment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>