force-app/main/default/objects/Apttus_Proposal__DocumentCollateInfo__c/fields/Apttus_Proposal__TemplateId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__TemplateId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The template which was used when generating the proposal</description>
    <inlineHelpText>The template which was used when generating the proposal</inlineHelpText>
    <label>Template</label>
    <referenceTo>Apttus__APTS_Template__c</referenceTo>
    <relationshipLabel>Document Collate Infos</relationshipLabel>
    <relationshipName>Document_Collate_Infos</relationshipName>
    <type>Lookup</type>
</CustomField>